--- a/exam-angular/src/app/app.component.html
+++ b/exam-angular/src/app/app.component.html
@@ -7,8 +7,10 @@
     <div id="topInput" class="flex flex-col space-y-3">
       <input id="input1" class="w-full bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="Nom du produit">
       <input id="input2" class="w-full bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="12x5+3"> 
-      <input id="input3" class="w-2/3 bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="3">
-      <input id="input4" class="w-1/3 bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="unité">
+      <div>
+        <input id="input3" class="w-2/3 bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="3">
+        <input id="input4" class="w-1/3 bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="unité">
+      </div>
     </div>
     <div id="touche" class="grid grid-cols-4 gap-4">
       <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none">7</button>
