--- a/exam-angular/src/app/app.component.html
+++ b/exam-angular/src/app/app.component.html
@@ -1,57 +1,62 @@
-<div class="flex flex-wrap">
-  <div id="main" class="items-center justify-center px-20 py-10 space-y-4">
+<div class="flex flex-wrap items-center justify-center ">
+  <div id="calculatrice" class="items-center justify-center px-20 py-10 ">
     <div id="topButton" class="flex justify-between grow space-x-1">
-      <button id="btn1" class="bg-slate-500 hover:bg-slate-700 text-white font-bold py-2 px-4 border border-slate-700 rounded w-1/2">Saisie</button>
-      <button id="btn2" class="bg-slate-500 hover:bg-slate-700 text-white font-bold py-2 px-4 border border-slate-700 rounded w-1/2">Inventaire</button>
+      <button id="btn1" class="bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded w-1/2">Saisie</button>
+      <button id="btn2" class="bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded w-1/2">Inventaire</button>
     </div>
-    <div id="topInput" class="flex flex-col space-y-3">
-      <input id="input1" class="w-full bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="Nom du produit" [(ngModel)]="inputNomDuProduit">
-      <input id="inputCalc" class="w-full bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="12x5+3" [(ngModel)]="inputCalc"> 
-      <div>
-        <input id="input3" class="w-2/3 bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="3" [(ngModel)]="inputResult">
-        <input id="input4" class="w-1/3 bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="unité">
+    <div class="bg-white shadow-2xl rounded-lg p-6  border space-y-4">
+      <div id="topInput" class="flex flex-col space-y-3">
+        <input id="input1" class="w-full bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="Nom du produit" [(ngModel)]="inputNomDuProduit">
+        <input id="inputCalc" class="w-full bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="12x5+3" [(ngModel)]="inputCalc"> 
+        <div>
+          <input id="input3" class="w-2/3 bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="3" [(ngModel)]="inputResult">
+          <select id="input4" class="w-1/3 bg-gray-100 text-center text-2xl rounded-xl px-4 " type="text" placeholder="unité" [(ngModel)]="inputUnite">
+            <option value="m²">m²</option>
+            <option value="ml">ml</option>
+            <option value="m3">m3</option>
+            <option value="u">u</option>
+            <option value="l">l</option>
+          </select>
+        </div>
       </div>
-    </div>
-    <div id="touche" class="grid grid-cols-4 gap-4">
-      <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('7')">(</button>
-      <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('7')">)</button>
-      <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="clear()">AC</button>
-      <button class="bg-yellow-500 text-xl font-bold text-white px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('/')">/</button>
+      <div id="touche" class="grid grid-cols-4 gap-4">
+        <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('(')">(</button>
+        <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber(')')">)</button>
+        <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="clear()">AC</button>
+        <button class="bg-yellow-500 text-xl font-bold text-white px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('/')">/</button>
 
-      <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('7')">7</button>
-      <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('8')">8</button>
-      <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('9')">9</button>
-      <button class="bg-yellow-500 text-xl font-bold text-white px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('*')">*</button>
-      <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('4')">4</button>
-      <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('5')">5</button>
-      <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('6')">6</button>
-      <button class="bg-yellow-500 text-xl font-bold text-white px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('-')">-</button>
-      <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('1')">1</button>
-      <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('2')">2</button>
-      <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('3')">3</button>
-      <button class="bg-yellow-500 text-xl font-bold text-white px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('+')">+</button>
-      <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('0')">0</button>
-      <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('.')">.</button>
-      <button class="bg-yellow-500 text-xl font-bold text-white px-4 py-2 rounded-lg focus:outline-none" (click)="execCalc()">=</button>
-      <button class="bg-yellow-500 text-xl font-bold text-white px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('+')">DEL</button>
+        <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('7')">7</button>
+        <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('8')">8</button>
+        <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('9')">9</button>
+        <button class="bg-yellow-500 text-xl font-bold text-white px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('*')">*</button>
+        <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('4')">4</button>
+        <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('5')">5</button>
+        <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('6')">6</button>
+        <button class="bg-yellow-500 text-xl font-bold text-white px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('-')">-</button>
+        <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('1')">1</button>
+        <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('2')">2</button>
+        <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('3')">3</button>
+        <button class="bg-yellow-500 text-xl font-bold text-white px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('+')">+</button>
+        <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('0')">0</button>
+        <button class="bg-gray-200 text-xl font-bold px-4 py-2 rounded-lg focus:outline-none" (click)="addNumber('.')">.</button>
+        <button class="bg-yellow-500 text-xl font-bold text-white px-4 py-2 rounded-lg focus:outline-none" (click)="execCalc()">=</button>
+        <button class="bg-yellow-500 text-xl font-bold text-white px-4 py-2 rounded-lg focus:outline-none" (click)="sendToInventory()">-></button>
+      </div>
     </div>
   </div>
   <div id="panneauDroit" class="items-center justify-center px-20 py-10 space-y-4 ">
-    <div class="flex flex-col items-center justify-center space-y-4">
-      <input  class="w-full bg-gray-100 text-right text-xl rounded-xl px-4 " type="text" placeholder="Nom du produit">
-      <input  class="w-full bg-gray-100 text-right text-xl rounded-xl px-4 " type="text" placeholder="Nom du produit">
-      <input  class="w-full bg-gray-100 text-right text-xl rounded-xl px-4 " type="text" placeholder="Nom du produit">
-      <input  class="w-full bg-gray-100 text-right text-xl rounded-xl px-4 " type="text" placeholder="Nom du produit">
-      <input  class="w-full bg-gray-100 text-right text-xl rounded-xl px-4 " type="text" placeholder="Nom du produit">
-      <input  class="w-full bg-gray-100 text-right text-xl rounded-xl px-4 " type="text" placeholder="Nom du produit">
-      <input  class="w-full bg-gray-100 text-right text-xl rounded-xl px-4 " type="text" placeholder="Nom du produit">
-      <input  class="w-full bg-gray-100 text-right text-xl rounded-xl px-4 " type="text" placeholder="Nom du produit">
-      <input  class="w-full bg-gray-100 text-right text-xl rounded-xl px-4 " type="text" placeholder="Nom du produit">
+    <div class="flex flex-col items-center justify-center space-y-4 overflow-y-scroll">
+      @for(item of tab; track item){
+        <div class="flex justify-between w-full bg-white shadow-lg rounded-lg p-6 ">
+          <div class="w-1/2">{{item.nomDuProduit}}</div>
+          <div class="w-1/2 text-right">{{item.quantite}}{{item.unite}}</div>
+        </div>
+      }
     </div>
-    <div id="importer" class="flex justify-between grow space-x-1">
-      <button class="md:w-full bg-slate-500 hover:bg-slate-700 text-white font-bold py-2 px-4 border border-slate-700 rounded">Importer un csv</button>
-      <button class="md:w-full bg-slate-500 hover:bg-slate-700 text-white font-bold py-2 px-4 border border-slate-700 rounded">Imprimer</button>
-      <button class="md:w-full bg-slate-500 hover:bg-slate-700 text-white font-bold py-2 px-4 border border-slate-700 rounded">Enregistrer en csv</button>
+    <div id="importer" class="flex justify-between grow space-x-1 bg-white shadow-lg rounded-lg p-6 sticky bottom-0">
+      <button class="md:w-full bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded">Importer un CSV</button>
+      <button class="md:w-full bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded">Imprimer</button>
+      <button class="md:w-full bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded" (click)="exportCSV()">Exporter en CSV</button>
     </div>
   </div>
 </div>
