--- a/exam-angular/src/app/app.component.html
+++ b/exam-angular/src/app/app.component.html
@@ -55,7 +55,7 @@
     </div>
     <div id="importer" class="flex justify-between grow space-x-1 bg-white shadow-lg rounded-lg p-6 sticky bottom-0">
       <button class="md:w-full bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded">Importer un CSV</button>
-      <button class="md:w-full bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded">Imprimer</button>
+      <button class="md:w-full bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded" (click)="print()">Imprimer</button>
       <button class="md:w-full bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded" (click)="exportCSV()">Exporter en CSV</button>
     </div>
   </div>
