--- a/exam-angular/src/app/app.component.html
+++ b/exam-angular/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-wrap items-center justify-center ">
-  <div id="calculatrice" class="items-center justify-center px-20 py-10 ">
+  <div id="calculatrice" class="items-center justify-center px-20 py-10 space-y-4">
     <div id="topButton" class="flex justify-between grow space-x-1">
       <button id="btn1" class="bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded w-1/2">Saisie</button>
       <button id="btn2" class="bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded w-1/2">Inventaire</button>
@@ -45,7 +45,7 @@
     </div>
   </div>
   <div id="panneauDroit" class="items-center justify-center px-20 py-10 space-y-4 ">
-    <div class="flex flex-col items-center justify-center space-y-4 overflow-y-scroll">
+    <div class="flex flex-col items-center justify-center space-y-4 ">
       @for(item of tab; track item){
         <div class="flex justify-between w-full bg-white shadow-lg rounded-lg p-6 ">
           <div class="w-1/2">{{item.nomDuProduit}}</div>
