--- a/exam-angular/src/app/app.component.html
+++ b/exam-angular/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="flex flex-wrap items-center justify-center ">
   <div id="calculatrice" class="items-center justify-center px-20 py-10 space-y-4">
     <div id="topButton" class="flex justify-between grow space-x-1">
-      <button id="btn1" class="bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded w-1/2">Saisie</button>
-      <button id="btn2" class="bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded w-1/2">Inventaire</button>
+      <button id="btn1" class="bg-sky-600 hover:bg-sky-800 text-white font-bold py-2 px-4 border border-sky-400 rounded w-1/2">Saisie</button>
+      <button id="btn2" class="bg-sky-600 hover:bg-sky-800 text-white font-bold py-2 px-4 border border-sky-400 rounded w-1/2">Inventaire</button>
     </div>
     <div class="bg-white shadow-2xl rounded-lg p-6  border space-y-4">
       <div id="topInput" class="flex flex-col space-y-3">
@@ -54,9 +54,9 @@
       }
     </div>
     <div id="importer" class="flex justify-between grow space-x-1 bg-white shadow-lg rounded-lg p-6 sticky bottom-0">
-      <button class="md:w-full bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded">Importer un CSV</button>
-      <button class="md:w-full bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded" (click)="print()">Imprimer</button>
-      <button class="md:w-full bg-slate-400 hover:bg-slate-600 text-white font-bold py-2 px-4 border border-slate-400 rounded" (click)="exportCSV()">Exporter en CSV</button>
+      <button class="md:w-full bg-sky-600 hover:bg-sky-800 text-white font-bold py-2 px-4 border border-sky-400 rounded">Importer un CSV</button>
+      <button class="md:w-full bg-sky-600 hover:bg-sky-800 text-white font-bold py-2 px-4 border border-sky-400 rounded" (click)="print()">Imprimer</button>
+      <button class="md:w-full bg-sky-600 hover:bg-sky-800 text-white font-bold py-2 px-4 border border-sky-400 rounded" (click)="exportCSV()">Exporter en CSV</button>
     </div>
   </div>
 </div>
