--- a/exam-angular/src/app/app.component.html
+++ b/exam-angular/src/app/app.component.html
@@ -7,9 +7,9 @@
     <div class="bg-white shadow-2xl rounded-lg p-6  border space-y-4">
       <div id="topInput" class="flex flex-col space-y-3">
         <input id="input1" class="w-full bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="Nom du produit" [(ngModel)]="inputNomDuProduit">
-        <input id="inputCalc" class="w-full bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="12x5+3" [(ngModel)]="inputCalc"> 
+        <input id="inputCalc" class="w-full bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="Calcul" [(ngModel)]="inputCalc"> 
         <div>
-          <input id="input3" class="w-2/3 bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="3" [(ngModel)]="inputResult">
+          <input id="input3" class="w-2/3 bg-gray-100 text-right text-2xl rounded-xl px-4 " type="text" placeholder="Resultat du calcul" [(ngModel)]="inputResult">
           <select id="input4" class="w-1/3 bg-gray-100 text-center text-2xl rounded-xl px-4 " type="text" placeholder="unité" [(ngModel)]="inputUnite">
             <option value="m²">m²</option>
             <option value="ml">ml</option>
